src/objects/tinderbox__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>tinderbox__Accepted__c</fullName>
        <description>Date/Time the Proposal was Accepted</description>
        <label>Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Access_Code__c</fullName>
        <description>Optional passcode for accessing public TinderBox document.</description>
        <label>Access Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional Lookup to the Account associated with the Opportunity</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TinderBox_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tinderbox__Last_Viewed__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tinderbox__Public_URL__c</fullName>
        <description>Public Link to Published Document.</description>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tinderbox__Published__c</fullName>
        <description>Date/Time the Proposal was Published</description>
        <label>Published</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TBAccount__c</fullName>
        <description>Octiv Account ID (Tied to Custom Setting Octiv Accounts)</description>
        <inlineHelpText>Octiv Account ID (Tied to Custom Setting Octiv Accounts)</inlineHelpText>
        <label>Octiv Account ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tinderbox__Views__c</fullName>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tinderbox__tinderboxid__c</fullName>
        <externalId>true</externalId>
        <label>Octiv ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Octiv Proposal</label>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Octiv Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>